--- a/exercises.ipynb
+++ b/exercises.ipynb
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [
     {
@@ -120,7 +120,7 @@
     "B = [5, 6, 7, 8]\n",
     "\n",
     "def exercise_1(A, B) -> pd.DataFrame:\n",
-    "    a = pd.DataFrame({'A': [1, 2, 3, 4], 'B': [5, 6, 7, 8]})\n",
+    "    a = pd.DataFrame({'A': A, 'B': B})\n",
     "    return a\n",
     "    return NotImplementedError\n",
     "\n",
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
     "ser2 = pd.Series(range(8))\n",
     "\n",
     "def exercise_2(ser1, ser2) -> pd.DataFrame:\n",
-    "    a = pd.DataFrame({'ser1': list('iloveyou'), 'ser2': range(8)})\n",
+    "    a = pd.concat([ser1.to_frame('ser1'), ser2.to_frame('ser2')], axis=1)\n",
     "    return a\n",
     "    return NotImplementedError\n",
     "\n",
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -532,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [
     {
@@ -568,7 +568,9 @@
    "source": [
     "def exercise_9(df) -> pd.DataFrame:\n",
     "    copy = df.copy()\n",
-    "    a = copy.astype({'Year': 'datetime64[ns]'}).dtypes\n",
+    "    copy['Year'] = pd.to_datetime(copy['Year'], format='%Y')\n",
+    "    a = copy.set_index('Year')\n",
+    "    return a\n",
     "    return NotImplementedError\n",
     "\n",
     "ex9_sol = exercise_9(df)\n",
@@ -733,7 +735,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 74,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -896,7 +898,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
@@ -925,17 +927,8 @@
    "source": [
     "def exercise_16(df) -> pd.Series:\n",
     "    copy = df.copy()\n",
-    "    additives = (\n",
-    "        copy['additives'].dropna()\n",
-    "        .str.replace(r'\\[|\\]', '', regex=True)  # Remove brackets\n",
-    "        .str.split(r'/s*->/s*en:\\w+', regex=True)  # Split at \"-> en:...\" codes\n",
-    "        .str[0]  # Keep only the additive name part\n",
-    "        .str.split(',/s*')  # Split entries separated by commas\n",
-    "        .explode()  # Create one row per additive\n",
-    "        .str.strip()  # Clean whitespace\n",
-    "        .str.lower()  # Normalize case\n",
-    "    )\n",
-    "    return (additives[additives != ''].value_counts().head(10))\n",
+    "    a = copy['additives'].value_counts().head(10)\n",
+    "    return a\n",
     "\n",
     "ex16_sol = exercise_16(df)\n",
     "q16.check()"
